infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web
  namespace: go-web
  labels:
    app: go-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-web
  strategy: {}
  template:
    metadata:
      labels:
        app: go-web
    spec:
      containers:
      - name: go-web
        image: 190103567417.dkr.ecr.us-east-1.amazonaws.com/kubernetes-tutorial:1
        ports:
          - containerPort: 3000
        resources: {}
