infra/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: go-web
  namespace: go-web
spec:
  selector:
    app: go-web
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
